Update screenshot keybind
- Changed SUPER+Shift+S to save directly to Pictures/Screenshots
- Removed swappy editor from screenshot workflow

--- a/.config/hypr/configs/Keybinds.conf
+++ b/.config/hypr/configs/Keybinds.conf
@@ -62,7 +62,7 @@ bind = $mainMod CTRL SHIFT, Print, exec, $scriptsDir/ScreenShot.sh --in10 # scre
 bind = ALT, Print, exec, $scriptsDir/ScreenShot.sh --active # screenshot (active window only)
 
 # screenshot with swappy (another screenshot tool)
-bind = $mainMod SHIFT, S, exec, $scriptsDir/ScreenShot.sh --swappy #screenshot (swappy)
+bind = $mainMod SHIFT, S, exec, $scriptsDir/ScreenShot.sh --area #screenshot (area - saves to Pictures/Screenshots)
 
 # Resize windows
 binde = $mainMod SHIFT, left, resizeactive,-50 0
